[package]
name = "migrate"
version = "0.1.4"
authors = ["Deisss <deisss@free.fr>"]
edition = "2018"
license = "MIT"
keywords = ["database", "migration", "migrate", "mysql", "postgres", "postgresql", "sqlite"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.15"
# TODO: clap
clap = "2.33.3"
glob = "0.3"
regex = "1"
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
postgres = "0.19.10"
rusqlite = { version = "0.34", features = ["bundled"] }
mysql = "26.0.0"
slog = "2.7"
slog-async = "2.8"
slog-term = "2.9.1"
slog-scope = "4.4.0"
chrono = "0.4.40"
md5 = "0.7.0"
console = "0.15"

[profile.release]
opt-level = 'z'
lto = true
# codegen-units = 1

[[bin]]
name = "migrate"
